--- a/style.html
+++ b/style.html
@@ -122,7 +122,8 @@
         }
         .lf-filters {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            grid-template-columns: minmax(280px, 3fr) minmax(180px, 1.1fr) minmax(260px, 2fr) auto;
+            align-items: end;
             gap: 14px;
             padding: 18px;
             border: 1px solid color-mix(in srgb, var(--primary-color) 14%, transparent);
@@ -153,11 +154,19 @@
             box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4);
         }
         .lf-filters .filter-group.filter-wide {
-            grid-column: span 2;
+            grid-column: 1 / span 1;
         }
-        @media (max-width: 720px) {
-            .lf-filters .filter-group.filter-wide {
-                grid-column: span 1;
+        @media (max-width: 1024px) {
+            .lf-filters {
+                grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+                align-items: start;
+            }
+            .lf-filters .filter-group.filter-actions {
+                align-items: flex-start;
+            }
+            .lf-filters .filter-actions .actions-row {
+                flex-wrap: wrap;
+                justify-content: flex-start;
             }
         }
         .lf-filters .filter-group label {
@@ -237,16 +246,23 @@
             border-color: color-mix(in srgb, var(--primary-color) 70%, var(--border-color) 30%);
             box-shadow: 0 0 0 4px var(--focus-ring), 0 12px 24px rgba(59, 130, 246, 0.08);
         }
+        .lf-filters .filter-group.filter-actions {
+            height: 100%;
+            padding: 10px 12px 12px;
+            display: flex;
+            justify-content: flex-end;
+            align-items: flex-end;
+        }
         .lf-filters .filter-actions {
             justify-content: center;
-            padding: 8px 12px 10px;
+            padding: 0;
         }
         .lf-filters .filter-actions .actions-row {
             display: flex;
             justify-content: flex-end;
             align-items: center;
             gap: 10px;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
         }
         .lf-filters .filter-actions .btn {
             margin: 0;
