--- a/style.html
+++ b/style.html
@@ -1,3 +1,4 @@
+
 <style>
         :root {
             /* Core palette */
@@ -122,8 +123,7 @@
         }
         .lf-filters {
             display: grid;
-            grid-template-columns: minmax(280px, 3fr) minmax(180px, 1.1fr) minmax(260px, 2fr) auto;
-            align-items: end;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
             gap: 14px;
             padding: 18px;
             border: 1px solid color-mix(in srgb, var(--primary-color) 14%, transparent);
@@ -154,19 +154,11 @@
             box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4);
         }
         .lf-filters .filter-group.filter-wide {
-            grid-column: 1 / span 1;
+            grid-column: span 2;
         }
-        @media (max-width: 1024px) {
-            .lf-filters {
-                grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-                align-items: start;
-            }
-            .lf-filters .filter-group.filter-actions {
-                align-items: flex-start;
-            }
-            .lf-filters .filter-actions .actions-row {
-                flex-wrap: wrap;
-                justify-content: flex-start;
+        @media (max-width: 720px) {
+            .lf-filters .filter-group.filter-wide {
+                grid-column: span 1;
             }
         }
         .lf-filters .filter-group label {
@@ -246,23 +238,16 @@
             border-color: color-mix(in srgb, var(--primary-color) 70%, var(--border-color) 30%);
             box-shadow: 0 0 0 4px var(--focus-ring), 0 12px 24px rgba(59, 130, 246, 0.08);
         }
-        .lf-filters .filter-group.filter-actions {
-            height: 100%;
-            padding: 10px 12px 12px;
-            display: flex;
-            justify-content: flex-end;
-            align-items: flex-end;
-        }
         .lf-filters .filter-actions {
             justify-content: center;
-            padding: 0;
+            padding: 8px 12px 10px;
         }
         .lf-filters .filter-actions .actions-row {
             display: flex;
             justify-content: flex-end;
             align-items: center;
             gap: 10px;
-            flex-wrap: nowrap;
+            flex-wrap: wrap;
         }
         .lf-filters .filter-actions .btn {
             margin: 0;
@@ -1257,94 +1242,6 @@
             border-radius: 8px;
             padding: 8px 10px;
             line-height: 1.4;
-        }
-        .swal-choice-group {
-            display: flex;
-            gap: 12px;
-            flex-wrap: wrap;
-        }
-        .swal-choice-chip {
-            display: inline-flex;
-            align-items: center;
-            gap: 10px;
-            padding: 12px;
-            border: 1px solid color-mix(in srgb, var(--border-color) 70%, transparent);
-            border-radius: 12px;
-            background: color-mix(in srgb, var(--surface-color) 94%, white 6%);
-            box-shadow: 0 10px 22px rgba(0, 0, 0, 0.06);
-            cursor: pointer;
-            min-width: 140px;
-            transition: all 0.2s ease;
-        }
-        .swal-choice-chip input[type="radio"] {
-            accent-color: var(--primary-color);
-            width: 16px;
-            height: 16px;
-        }
-        .swal-choice-chip .swal-choice-content {
-            display: flex;
-            flex-direction: column;
-            gap: 2px;
-        }
-        .swal-choice-chip span {
-            font-weight: 600;
-            color: var(--dark-color);
-        }
-        .swal-choice-chip small {
-            color: var(--muted-color);
-            font-size: 0.75rem;
-        }
-        .swal-choice-chip:hover, .swal-choice-chip:focus-within {
-            border-color: color-mix(in srgb, var(--primary-color) 50%, var(--border-color));
-            box-shadow: 0 14px 24px color-mix(in srgb, var(--primary-color) 16%, var(--shadow-color));
-            transform: translateY(-1px);
-        }
-        .swal-photo-upload {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            padding: 12px;
-            border: 1px dashed color-mix(in srgb, var(--border-color) 80%, transparent);
-            border-radius: 12px;
-            background: color-mix(in srgb, var(--surface-color) 92%, white 8%);
-        }
-        .swal-photo-trigger {
-            display: inline-flex;
-            align-items: center;
-            gap: 8px;
-            padding: 10px 14px;
-            background: var(--primary-color);
-            color: white;
-            border: none;
-            border-radius: 10px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: transform 0.15s ease, box-shadow 0.15s ease;
-            box-shadow: 0 10px 20px rgba(59, 130, 246, 0.25);
-        }
-        .swal-photo-trigger:hover, .swal-photo-trigger:focus-visible {
-            transform: translateY(-1px);
-            box-shadow: 0 12px 22px rgba(59, 130, 246, 0.35);
-        }
-        .swal-photo-status {
-            margin: 0;
-            font-size: 0.85rem;
-            color: var(--muted-color);
-            display: flex;
-            align-items: center;
-            gap: 8px;
-        }
-        .swal-photo-status.attached {
-            color: var(--success-color);
-            font-weight: 600;
-        }
-        #contingencia-foto-wrapper.has-photo .swal-photo-upload {
-            border-color: color-mix(in srgb, var(--success-color) 60%, var(--border-color));
-            background: color-mix(in srgb, var(--success-color) 12%, var(--surface-color));
-        }
-        #contingencia-foto-wrapper.invalid .swal-photo-upload {
-            border-color: color-mix(in srgb, var(--error-color) 55%, var(--border-color));
-            background: color-mix(in srgb, var(--error-color) 12%, var(--surface-color));
         }
         .swal-helper-text {
             margin: 0 0 8px 0;
