Ajusta alinhamento dos filtros de Achados e Perdidos

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                         </div>
                     </div>
                     <div class="lf-filters glass-card">
-                        <div class="filter-group filter-wide">
+                        <div class="filter-group">
                             <label for="achados-busca">Buscar</label>
                             <div class="input-icon">
                                 <i class="fas fa-search"></i>
