--- a/script.html
+++ b/script.html
@@ -1528,7 +1528,7 @@
                 setTimeout(() => reproduzirTom(720, 0.12, 0.05), 90);
             }
         }
-        function lerArquivoImagemComoBase64(arquivo, limiteKb = 300) {
+        function lerArquivoImagemComoBase64(arquivo, limiteKb = 70) {
             return new Promise((resolve, reject) => {
                 if (!arquivo) {
                     reject(new Error('Arquivo inválido'));
@@ -1542,7 +1542,7 @@
                     imagem.onload = () => {
                         const canvas = document.createElement('canvas');
                         const contexto = canvas.getContext('2d');
-                        const maxLado = 1600;
+                        const maxLado = 1200;
 
                         let { width, height } = imagem;
                         if (Math.max(width, height) > maxLado) {
@@ -1567,20 +1567,32 @@
                         let tamanhoAtual = calcularTamanhoKb(dataUrl);
                         let tentativas = 0;
 
-                        while (tamanhoAtual > limiteKb && tentativas < 8) {
-                            if (qualidade > 0.55) {
-                                qualidade -= 0.1;
+                        while (tamanhoAtual > limiteKb && tentativas < 10) {
+                            if (qualidade > 0.45) {
+                                qualidade = Math.max(0.4, qualidade - 0.1);
                             } else {
-                                const escala = 0.9;
-                                canvas.width = Math.round(canvas.width * escala);
-                                canvas.height = Math.round(canvas.height * escala);
+                                const escalaCalculada = Math.max(0.55, Math.sqrt(limiteKb / Math.max(tamanhoAtual, 1)));
+                                const escala = Math.min(0.9, escalaCalculada);
+                                canvas.width = Math.max(320, Math.round(canvas.width * escala));
+                                canvas.height = Math.max(320, Math.round(canvas.height * escala));
                                 contexto.clearRect(0, 0, canvas.width, canvas.height);
                                 contexto.drawImage(imagem, 0, 0, canvas.width, canvas.height);
-                                qualidade = 0.85;
+                                qualidade = Math.max(0.5, qualidade - 0.05);
                             }
                             dataUrl = canvas.toDataURL(mimePadrao, qualidade);
                             tamanhoAtual = calcularTamanhoKb(dataUrl);
                             tentativas += 1;
+                        }
+
+                        if (tamanhoAtual > limiteKb) {
+                            const fatorReducao = Math.max(0.45, Math.sqrt(limiteKb / Math.max(tamanhoAtual, 1)));
+                            const novaLargura = Math.max(280, Math.round(canvas.width * fatorReducao));
+                            const novaAltura = Math.max(280, Math.round(canvas.height * fatorReducao));
+                            canvas.width = novaLargura;
+                            canvas.height = novaAltura;
+                            contexto.clearRect(0, 0, canvas.width, canvas.height);
+                            contexto.drawImage(imagem, 0, 0, canvas.width, canvas.height);
+                            dataUrl = canvas.toDataURL(mimePadrao, Math.max(0.45, qualidade - 0.05));
                         }
 
                         resolve({ base64: dataUrl, mime: mimePadrao });
