--- a/style.html
+++ b/style.html
@@ -2299,6 +2299,21 @@
             font-size: 1.1rem;
             margin-top: 2px;
         }
+
+        .armario-foto {
+            margin: 12px 0 8px;
+        }
+
+        .armario-foto-thumb {
+            margin-top: 6px;
+        }
+
+        .armario-foto-thumb img {
+            max-width: 140px;
+            border-radius: 8px;
+            border: 1px solid #e5e7eb;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
+        }
         /* Tabelas de dados */
         .data-table {
             background-color: var(--surface-color);
