--- a/style.html
+++ b/style.html
@@ -418,6 +418,19 @@
             white-space: nowrap;
             border: 0;
         }
+        /* Garante que inputs de arquivo usados em modais fiquem ocultos
+           quando estilizados por um botão customizado. */
+        .swal2-popup input[type="file"].sr-only {
+            position: absolute !important;
+            width: 1px !important;
+            height: 1px !important;
+            padding: 0 !important;
+            margin: -1px !important;
+            overflow: hidden !important;
+            clip: rect(0, 0, 0, 0) !important;
+            white-space: nowrap !important;
+            border: 0 !important;
+        }
         * {
             margin: 0;
             padding: 0;
